[package]
name = "colt"
version = "0.0.0"
edition = "2024"
description = "Placeholder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burtonageo/colt"

[dependencies]
approx = "0.5.1"

[dependencies.libm]
version = "0.2"
optional = true

[dependencies.vectral]
git = "https://github.com/burtonageo/vectral.git"
default-features = false
features = ["std", "nightly", "approx", "simd"]

[dependencies.serde_core]
version = "1"
optional = true

[features]
default = ["std"]
libm = ["dep:libm", "vectral/libm"]
std = ["vectral/std"]
serde = ["dep:serde_core", "vectral/serde"]
